--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,8 @@
 
     <!--    Permissions    -->
     <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
-    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
-    <string name="permission_required_toast">Location permission is required for this demo.</string>
+    <string name="location_permission_denied">Whitebikes requires location permission to enable geolocation functionality. If the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Whitebike\'.</string>
+    <string name="permission_required_toast">Location permission is required for this functionality.</string>
 
 
     <string name="available_bikes">Available bikes:</string>
@@ -22,4 +22,8 @@
     <string name="change_code_to">Change code immediately to:</string>
     <string name="confirm_code_change">Confirm code change</string>
     <string name="change_code_howto">(open, rotate metal part, set new code, rotate metal part back)</string>
+    <string name="openDrawer">Open drawer</string>
+    <string name="closeDrawer">Close drawer</string>
+    <string name="ride_history">Ride history</string>
+    <string name="profile">Profile</string>
 </resources>
