--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="eur_credit">€ %s</string>
     <string name="rent">Rent</string>
     <string name="cancel">Cancel</string>
+    <string name="search">Search</string>
 </resources>
