--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="rent">Rent</string>
     <string name="cancel">Cancel</string>
     <string name="search">Search</string>
+    <string name="info">Info</string>
+    <string name="return_word">Return</string>
 </resources>
