Help button, expandable/closable bottom sheet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="search">Search</string>
     <string name="info">Info</string>
     <string name="return_word">Return</string>
+    <string name="closest_stands">Closest stands</string>
+    <string name="help">Help</string>
 </resources>
